# agent-cookbook

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: architecture.md
langchain/: README.md
mcp/: README.md
playground/: README.md
semantic_kernel/: README.md
semantic_kernel/ai_service/chatcompletion/: 00_ChatCompletion.py  01_Convesation.py  02_DifferentUser.py  03_FucntionCallingSimulation.py  04_ChatHistoryReducer.py  05_MultiMordalChat.py
