[project]
name = "agent-cookbook"
version = "0.1.0"
description = "Hands-on LLM Agents using LangChain, Semantic Kernel, MCP"
authors = ["k_kobakenjp@yahoo.co.jp"]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langchain>=0.2.0",
    "semantic-kernel>=0.9.0",
    "openai>=1.30.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.29.0"
]

[tool.uv] # 任意セクション（将来的な設定拡張用）
